--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -119,6 +119,25 @@
   margin-left: 3px;
 }
 
+.quantity-input {
+  width: 30px;
+}
+
+.save-quantity-link,
+.quantity-input {
+  display: none;
+}
+
+.is-editing-quantity .quantity-input,
+.is-editing-quantity .save-quantity-link {
+  display: initial;
+}
+
+.is-editing-quantity .quantity-label,
+.is-editing-quantity .update-quantity-link {
+  display:none;
+}
+
 @media (max-width: 1000px) {
   .delivery-options {
     /* grid-column: 1 means this element will be placed
